[Feature #161171476] Replaced stock with inventory

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1 >LOGIN FORM</h1></div>
 <form >
   <div class="imgcontainer">
-  <img src="images/avatar.png" alt="Avatar" class="avatar">
+  <img src="./images/avatar.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
