--- a/adminlogin.html
+++ b/adminlogin.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-  <title>STORE MANAGER</title>
+<head><title>STORE MANAGER</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+
 </head>
-
-
 <body>
 <div class = "wrap">
   <div id = "title">
 <h1 >LOGIN FORM</h1></div>
 <form >
   <div class="imgcontainer">
-  <img src="images/avatar.png" alt="Avatar" class="avatar">
+  <img src="../images/avatar.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
@@ -26,14 +23,13 @@
     <label><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <button type="button" class="login"> <a href="homepage.html">Login</a> </button><br><br>
-	<!-- <div>
+    <button type="button" class="login"> <a href="adminhomepage.html">Login</a> </button>
+	<div>
     <input type="checkbox" checked="checked"> Remember me
-	</div><br> -->
-  <div class = "admin">
-    <a href="Admin/adminlogin.html">Login as Admin</a> 
-  </div>
-  </div>
+	</div>
+
+   
+  
   </div>
 </form>
 </body>
