[Feature #161177584] Added a changed css file

--- a/adduser.html
+++ b/adduser.html
@@ -18,6 +18,17 @@
            <div class = "search">
                <input type="text" placeholder="Search Product..">
            </div>
+           <div class="topnav-right">
+            <div class="dropdown">
+                <button class="dropbtn">Account
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="adminprofile.html">Profile</a>
+                  <a href="adminlogin.html">Logout</a>
+                  </div>
+                </div>
+              </div>
          </div> 
          <h1>NEW ATTENDANT DETAILS</h1>
          <div class = "card">
