--- a/adminhomepage.html
+++ b/adminhomepage.html
@@ -18,6 +18,17 @@
             <div class = "search">
                 <input type="text" placeholder="Search Product..">
             </div>
+            <div class="topnav-right">
+                <div class="dropdown">
+                    <button class="dropbtn">Account
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="adminprofile.html">Profile</a>
+                      <a href="adminlogin.html">Logout</a>
+                      </div>
+                    </div>
+                  </div>
           </div> 
            
         </div>
@@ -25,7 +36,7 @@
         
     <div class="products">
         <div class="product">
-            <img width="auto" height="150" src="../images/cantu.jpg">
+            <img width="auto" height="150" src="./images/cantu.jpg">
             <div class="details">
                 <h4>Cantu Hair Moisturizer</h4>
                 <details>
@@ -44,7 +55,7 @@
             </div>
         </div>
             <div class="product">
-                <img width="auto" height="150" src="../images/coco.png">
+                <img width="auto" height="150" src="./images/coco.png">
                 <div class="details">
                     <h4>Coco Channel Perfume</h4>
                     <details>
@@ -62,7 +73,7 @@
                 </div>
             </div>
                 <div class="product">
-                <img width="auto" height="150" src="../images/Eyeshadow-Palette.jpg">
+                <img width="auto" height="150" src="./images/Eyeshadow-Palette.jpg">
                 <div class="details">
                     <h4>Eyeshadow Palette</h4>
                     <details>
@@ -80,7 +91,7 @@
                 </div>
                 </div>
                     <div class="product">
-                    <img width="auto" height="150" src="../images/garnier-lift---cream-day-50-ml.png">
+                    <img width="auto" height="150" src="./images/garnier-lift---cream-day-50-ml.png">
                     <div class="details">
                     <h4>Garnier Lift Cream</h4>
                     <details>
@@ -98,7 +109,7 @@
                     </div>
                     </div>
                         <div class="product">
-                        <img width="auto" height="150" src="../images/gift-set.jpg">
+                        <img width="auto" height="150" src="./images/gift-set.jpg">
                         <div class="details">
                         <h4>Japanese Cherry Gift Set</h4>
                         <details>
@@ -116,7 +127,7 @@
                         </div>
                         </div>
                       <div class="product">
-                         <img width="auto" height="150" src="../images/japanese-cherry-blossom.jpg">
+                         <img width="auto" height="150" src="./images/japanese-cherry-blossom.jpg">
                          <div class="details">
                              <h4>Japanese Cherry Blossom</h4>
                              <details>
@@ -134,7 +145,7 @@
                           </div>
                       </div>
                       <div class="product">
-                         <img width="auto" height="150" src="../images/miami-matte-lipstick.jpg">
+                         <img width="auto" height="150" src="./images/miami-matte-lipstick.jpg">
                          <div class="details">
                              <h4>Miami Matte Lipstick</h4>
                              <details>
@@ -152,7 +163,7 @@
                           </div>
                       </div>
                       <div class="product">
-                         <img width="auto" height="150" src="../images/perfume.png">
+                         <img width="auto" height="150" src="./images/perfume.png">
                          <div class="details">
                              <h4>Miss Dior Cherie Perfume</h4>
                              <details>
@@ -170,7 +181,7 @@
                           </div>
                       </div>
                       <div class="product">
-                        <img width="auto" height="150" src="../images/serum.jpg">
+                        <img width="auto" height="150" src="./images/serum.jpg">
                         <div class="details">
                             <h4>Face Serum</h4>
                             <details>
@@ -188,7 +199,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="../images/strawberry-shower-gel.jpg">
+                        <img width="auto" height="150" src="./images/strawberry-shower-gel.jpg">
                         <div class="details">
                             <h4>Strawberry Shower Gel</h4>
                             <details>
@@ -206,7 +217,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="../images/Styled-Body-Mists.jpg">
+                        <img width="auto" height="150" src="./images/Styled-Body-Mists.jpg">
                         <div class="details">
                             <h4>Styled Body Mist</h4>
                             <details>
@@ -224,7 +235,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="../images/Nivea-body-spray.jpg">
+                        <img width="auto" height="150" src="./images/Nivea-body-spray.jpg">
                         <div class="details">
                             <h4>Nivea Body Deodorant</h4>
                             <details>
