--- a/adminsales.html
+++ b/adminsales.html
@@ -19,6 +19,17 @@
             <div class = "search">
                 <input type="text" placeholder="Filter by Attendant..">
             </div>
+            <div class="topnav-right">
+              <div class="dropdown">
+                  <button class="dropbtn">Account
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="adminprofile.html">Profile</a>
+                    <a href="adminlogin.html">Logout</a>
+                    </div>
+                  </div>
+                </div>
           </div> 
            
         </div>
