--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1 >LOGIN FORM</h1></div>
 <form >
   <div class="imgcontainer">
-  <img src="images/avatar.png" alt="Avatar" class="avatar">
+  <img src="./images/avatar.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
@@ -31,7 +31,7 @@
     <input type="checkbox" checked="checked"> Remember me
 	</div><br> -->
   <div class = "admin">
-    <a href="Admin/adminlogin.html">Login as Admin</a> 
+    <a href="adminlogin.html">Login as Admin</a> 
   </div>
   </div>
   </div>
