--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,7 @@
     <header>
         <div class="topnav"id="myTopnav">
             <a href="homepage.html">All Products</a>
-            <a href="Sales.html">Sales</a>
+            <a href="sales.html">Sales</a>
             <div class = "search">
               <input type="text" placeholder="Search Product..">
           </div>
