--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="checkbox" checked="checked"> Remember me
 	</div><br> -->
   <div class = "admin">
-    <a href="Admin/adminlogin.html">Login as Admin</a> 
+    <a href="adminlogin.html">Login as Admin</a> 
   </div>
   </div>
   </div>
