[Bug #161180801] Fix link error

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
     <header>
         <div class="topnav"id="myTopnav">
             <a href="homepage.html">All Products</a>
-            <a href="Sales.html">Sales</a>
+            <a href="sales.html">Sales</a>
                     <div class = "search">
                 <input type="text" placeholder="Search Product..">
             </div>
@@ -32,7 +32,7 @@
         
      <div class="products">
         <div class="product">
-            <img width="auto" height="150" src="./images/cantu.jpg">
+            <img width="auto" height="150" src="images/cantu.jpg">
             <div class="details">
                 <h3>Cantu Hair Moisturizer</h3>
                 <details>
@@ -53,7 +53,7 @@
         </div>
         
             <div class="product">
-                <img width="auto" height="150" src="./images/coco.png">
+                <img width="auto" height="150" src="images/coco.png">
                 <div class="details">
                     <h3>Coco Channel Perfume</h3>
                     <details>
@@ -72,7 +72,7 @@
                 </div>
             </div>
                 <div class="product">
-                <img width="auto" height="150" src="./images/Eyeshadow-Palette.jpg">
+                <img width="auto" height="150" src="images/Eyeshadow-Palette.jpg">
                 <div class="details">
                     <h3>Eyeshadow Palette</h3>
                     <details>
@@ -91,7 +91,7 @@
                 </div>
                 </div>
                     <div class="product">
-                    <img width="auto" height="150" src="./images/garnier-lift---cream-day-50-ml.png">
+                    <img width="auto" height="150" src="images/garnier-lift---cream-day-50-ml.png">
                     <div class="details">
                     <h3>Garnier Lift Cream</h3>
                     <details>
@@ -110,7 +110,7 @@
                     </div>
                     </div>
                         <div class="product">
-                        <img width="auto" height="150" src="./images/gift-set.jpg">
+                        <img width="auto" height="150" src="images/gift-set.jpg">
                         <div class="details">
                         <h3>Japanese Cherry Gift Set</h3>
                         <details>
@@ -130,7 +130,7 @@
                         </div>
                         </div>
                       <div class="product">
-                         <img width="auto" height="150" src="./images/japanese-cherry-blossom.jpg">
+                         <img width="auto" height="150" src="images/japanese-cherry-blossom.jpg">
                          <div class="details">
                              <h3>Japanese Cherry Blossom</h3>
                              <details>
@@ -149,7 +149,7 @@
                           </div>
                       </div>
                       <div class="product">
-                         <img width="auto" height="150" src="./images/miami-matte-lipstick.jpg">
+                         <img width="auto" height="150" src="images/miami-matte-lipstick.jpg">
                          <div class="details">
                              <h3>Miami Matte Lipstick</h3>
                              <details>
@@ -168,7 +168,7 @@
                           </div>
                       </div>
                       <div class="product">
-                         <img width="auto" height="150" src="./images/perfume.png">
+                         <img width="auto" height="150" src="images/perfume.png">
                          <div class="details">
                              <h3>Miss Dior Cherie Perfume</h3>
                              <details>
@@ -187,7 +187,7 @@
                           </div>
                       </div>
                       <div class="product">
-                        <img width="auto" height="150" src="./images/serum.jpg">
+                        <img width="auto" height="150" src="images/serum.jpg">
                         <div class="details">
                             <h3>Face Serum</h3>
                             <details>
@@ -206,7 +206,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="./images/strawberry-shower-gel.jpg">
+                        <img width="auto" height="150" src="images/strawberry-shower-gel.jpg">
                         <div class="details">
                             <h3>Strawberry Shower Gel</h3>
                             <details>
@@ -225,7 +225,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="./images/Styled-Body-Mists.jpg">
+                        <img width="auto" height="150" src="images/Styled-Body-Mists.jpg">
                         <div class="details">
                             <h3>Styled Body Mist</h3>
                             <details>
@@ -244,7 +244,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="./images/Nivea-body-spray.jpg">
+                        <img width="auto" height="150" src="images/Nivea-body-spray.jpg">
                         <div class="details">
                             <h3>Nivea Body Deodorant</h3>
                             <details>
