--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     <header>
         <div class="topnav"id="myTopnav">
             <a href="homepage.html">All Products</a>
-            <a href="Sales.html">Sales</a>
+            <a href="sales.html">Sales</a>
                     <div class = "search">
                 <input type="text" placeholder="Search Product..">
             </div>
@@ -35,7 +35,7 @@
       <h1 >MY PROFILE</h1></div>
       <form >
           <div class="imgcontainer">
-          <img src="./images/avatar.png" alt="Avatar" class="avatar">
+          <img src="images/avatar.png" alt="Avatar" class="avatar">
           </div>
         <h2>Store Attendant</h2><br>
         <p>Username:John Doe</p>
@@ -76,9 +76,9 @@
 
        
   
-          <div class="footer">
+          <!-- <div class="footer">
               <p>Copyrights 2018</p>
-            </div>
+            </div> -->
 </body>
 
 </html>
