--- a/adduser.html
+++ b/adduser.html
@@ -5,31 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Store Manager</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href=style.css">
 </head>
 <body>
-   <header>
-       <div class="topnav"id="myTopnav">
-          <a href="adminhomepage.html">All Products</a>
-            <a href="adminsales.html"> Total Sales</a>
-            <a href="attendantsales.html">Attendant Sales</a>
-            <a href="Action.html">Action</a>
-             <a href="adduser.html">Add User</a>
-           <div class = "search">
-               <input type="text" placeholder="Search Product..">
-           </div>
-           <div class="topnav-right">
-            <div class="dropdown">
-                <button class="dropbtn">Account
-                  <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                  <a href="adminprofile.html">Profile</a>
-                  <a href="adminlogin.html">Logout</a>
-                  </div>
-                </div>
-              </div>
-         </div> 
+  <header>
+    <div class="topnav"id="myTopnav">
+        <a href="adminhomepage.html">All Products</a>
+        <a href="adminsales.html"> Total Sales</a>
+        <a href="attendantsales.html">Attendant Sales</a>
+        <a href="Action.html">Action</a>
+         <a href="adduser.html">Add User</a>
+        <div class = "search">
+            <input type="text" placeholder="Filter by Attendant name..">
+        </div>
+        <div class="topnav-right">
+          <div class="dropdown">
+              <button class="dropbtn">Account
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="adminprofile.html">Profile</a>
+                <a href="index.html">Logout</a>
+          </div>
+      </div> 
+       
+    </div>
+</header>
          <h1>NEW ATTENDANT DETAILS</h1>
          <div class = "card">
             <div class = "container2">
