--- a/adminprofile.html
+++ b/adminprofile.html
@@ -9,33 +9,35 @@
 </head>
 
 <body>
-    <header>
-        <div class="topnav"id="myTopnav">
-            <a href="homepage.html">All Products</a>
-            <a href="Sales.html">Sales</a>
-                    <div class = "search">
-                <input type="text" placeholder="Search Product..">
-            </div>
-            <div class="topnav-right">
-            <div class="dropdown">
-                <button class="dropbtn">Account
-                  <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                  <a href="profile.html">Profile</a>
-                  <a href="index.html">Logout</a>
-                  </div>
-                </div>
-              </div> 
-          </div> 
-           
-    </header>
+  <header>
+    <div class="topnav"id="myTopnav">
+        <a href="adminhomepage.html">All Products</a>
+        <a href="adminsales.html"> Total Sales</a>
+        <a href="attendantsales.html">Attendant Sales</a>
+        <a href="Action.html">Action</a>
+         <a href="adduser.html">Add User</a>
+        <div class = "search">
+            <input type="text" placeholder="Filter by Attendant name..">
+        </div>
+        <div class="topnav-right">
+          <div class="dropdown">
+              <button class="dropbtn">Account
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="adminprofile.html">Profile</a>
+                <a href="index.html">Logout</a>
+          </div>
+      </div> 
+       
+    </div>
+</header>
     <div class = "card">
         <div id = "title">
       <h1 >MY PROFILE</h1></div>
       <form >
           <div class="imgcontainer">
-          <img src="images/avatar.png" alt="Avatar" class="avatar">
+          <img src="../images/avatar.png" alt="Avatar" class="avatar">
           </div>
         <h2>Store Attendant</h2><br>
         <p>Username:John Doe</p>
