Bug #161197509 - Fix admin images link

--- a/adminhomepage.html
+++ b/adminhomepage.html
@@ -16,7 +16,7 @@
         <a href="Action.html">Action</a>
          <a href="adduser.html">Add User</a>
         <div class = "search">
-            <input type="text" placeholder="Filter by Attendant name..">
+            <input type="text" placeholder="Search Product..">
         </div>
         <div class="topnav-right">
             <div class="dropdown">
@@ -34,7 +34,7 @@
         
     <div class="products">
         <div class="product">
-            <img width="auto" height="150" src="../images/cantu.jpg">
+            <img width="auto" height="150" src="images/cantu.jpg">
             <div class="details">
                 <h4>Cantu Hair Moisturizer</h4>
                 <details>
@@ -53,7 +53,7 @@
             </div>
         </div>
             <div class="product">
-                <img width="auto" height="150" src="../images/coco.png">
+                <img width="auto" height="150" src="images/coco.png">
                 <div class="details">
                     <h4>Coco Channel Perfume</h4>
                     <details>
@@ -71,7 +71,7 @@
                 </div>
             </div>
                 <div class="product">
-                <img width="auto" height="150" src="../images/Eyeshadow-Palette.jpg">
+                <img width="auto" height="150" src="images/Eyeshadow-Palette.jpg">
                 <div class="details">
                     <h4>Eyeshadow Palette</h4>
                     <details>
@@ -89,7 +89,7 @@
                 </div>
                 </div>
                     <div class="product">
-                    <img width="auto" height="150" src="../images/garnier-lift---cream-day-50-ml.png">
+                    <img width="auto" height="150" src="images/garnier-lift---cream-day-50-ml.png">
                     <div class="details">
                     <h4>Garnier Lift Cream</h4>
                     <details>
@@ -107,7 +107,7 @@
                     </div>
                     </div>
                         <div class="product">
-                        <img width="auto" height="150" src="../images/gift-set.jpg">
+                        <img width="auto" height="150" src="images/gift-set.jpg">
                         <div class="details">
                         <h4>Japanese Cherry Gift Set</h4>
                         <details>
@@ -125,7 +125,7 @@
                         </div>
                         </div>
                       <div class="product">
-                         <img width="auto" height="150" src="../images/japanese-cherry-blossom.jpg">
+                         <img width="auto" height="150" src="images/japanese-cherry-blossom.jpg">
                          <div class="details">
                              <h4>Japanese Cherry Blossom</h4>
                              <details>
@@ -143,7 +143,7 @@
                           </div>
                       </div>
                       <div class="product">
-                         <img width="auto" height="150" src="../images/miami-matte-lipstick.jpg">
+                         <img width="auto" height="150" src="images/miami-matte-lipstick.jpg">
                          <div class="details">
                              <h4>Miami Matte Lipstick</h4>
                              <details>
@@ -161,7 +161,7 @@
                           </div>
                       </div>
                       <div class="product">
-                         <img width="auto" height="150" src="../images/perfume.png">
+                         <img width="auto" height="150" src="images/perfume.png">
                          <div class="details">
                              <h4>Miss Dior Cherie Perfume</h4>
                              <details>
@@ -179,7 +179,7 @@
                           </div>
                       </div>
                       <div class="product">
-                        <img width="auto" height="150" src="../images/serum.jpg">
+                        <img width="auto" height="150" src="images/serum.jpg">
                         <div class="details">
                             <h4>Face Serum</h4>
                             <details>
@@ -197,7 +197,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="../images/strawberry-shower-gel.jpg">
+                        <img width="auto" height="150" src="images/strawberry-shower-gel.jpg">
                         <div class="details">
                             <h4>Strawberry Shower Gel</h4>
                             <details>
@@ -215,7 +215,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="../images/Styled-Body-Mists.jpg">
+                        <img width="auto" height="150" src="images/Styled-Body-Mists.jpg">
                         <div class="details">
                             <h4>Styled Body Mist</h4>
                             <details>
@@ -233,7 +233,7 @@
                          </div>
                      </div>
                      <div class="product">
-                        <img width="auto" height="150" src="../images/Nivea-body-spray.jpg">
+                        <img width="auto" height="150" src="images/Nivea-body-spray.jpg">
                         <div class="details">
                             <h4>Nivea Body Deodorant</h4>
                             <details>
