--- a/adminprofile.html
+++ b/adminprofile.html
@@ -37,7 +37,7 @@
       <h1 >MY PROFILE</h1></div>
       <form >
           <div class="imgcontainer">
-          <img src="../images/avatar.png" alt="Avatar" class="avatar">
+          <img src="images/avatar.png" alt="Avatar" class="avatar">
           </div>
         <h2>Store Attendant</h2><br>
         <p>Username:John Doe</p>
