--- a/adduser.html
+++ b/adduser.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Store Manager</title>
-  <link rel="stylesheet" href=style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -16,7 +16,7 @@
         <a href="Action.html">Action</a>
          <a href="adduser.html">Add User</a>
         <div class = "search">
-            <input type="text" placeholder="Filter by Attendant name..">
+            <input type="text" placeholder="Search..">
         </div>
         <div class="topnav-right">
           <div class="dropdown">
